# Green_Cast_MVP

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEMO_SCRIPT.md  README.md
backend/: .env.example  README.md  greencast.db  pyproject.toml  requirements.txt  vercel.json
backend/app/: ai_gateway.py  commentary.py  database.py  ingestion.py  interpretation.py  main.py  models.py  normalization.py  rules.py  seed.py
backend/app/routers/: commentary.py  funds.py  ingestion.py  interpretation.py  portfolio.py  risk_factors.py  roi.py  screening.py
backend/tests/: conftest.py  test_ai_modules.py  test_commentary.py  test_funds.py  test_normalization.py  test_portfolio.py  test_roi.py  test_screening.py
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/funds/: page.tsx
frontend/app/funds/[id]/: page.tsx
frontend/app/ingestion/: page.tsx
frontend/app/portfolio/[id]/: page.tsx
frontend/app/roi/: page.tsx
frontend/app/screening/: page.tsx
frontend/components/: commentary-panel.tsx  holdings-table.tsx  interpretation-panel.tsx  nav.tsx  risk-factor-card.tsx  risk-gauge.tsx  roi-calculator.tsx
frontend/lib/: types.ts  utils.ts
